# homematic_exporter

./: .gitignore  exporter.py  flake.nix  package.nix  pyproject.toml
src/homematic_exporter/: main.py
